Changes to 1.2.5 +nb

[CHANGES]
*lib/commentary.php --> added a new hook "gmcommentarea" with section and "allow_gm"=>false to handle module requests to allow /game comments 
	 		added a fix (GM titles didn't work due to wrong variable used)
*lib/forest.php --> new hook "forest" to add stuff before the description (i.e. for mobile buttons that need to be top)
*superuser.php --> new hook to make the section "switchable"
[FIXES]
*lib/commentary.php --> forgot a closing > at a </div> - section close
[REMOVES]

Changes to 1.2.4 +nb
[CHANGES]
*home.php --> added a "forgotten password" link below the Login Button
*mailserver_info.php, lib/pageparts.php etc.  --> AJAX reworked, removed faulty body implementation, made JQuery compliant and added JQ
*lib/playerfunctions.php, lib/pageparts.php --> Quality of life: added a atk/def explain how the value gets calculated.
[FIXES]
*hof.php --> money sorting did not work with the cast() commands in the mysql syntax anymore (since mysql 5.5). Redid that and it works now (included even number formatting to full hundreds)
[REMOVES]
[NOTES]

Changes to 1.2.3 +nb
[CHANGES]
*login.php, superuser.php --> now superusers who logout to the fields will be brought to the grotto on login (no newday). So people who "just check in" won't be bothered with a new day unless they want it. In superuser.php I put in a logout for superusers. In login.php it checks if a superuser with (!) grotto access logs out.
*login.php --> lowered the threshold for bans to 15 minutes
*lib/sanitize.php --> new function sanitize_mb($str), which will cut a string until it is a valid encoding - or 0.
[FIXES]
Well, a big group of problems shows up with multibyte strings. substr breaks multibytes, hence causing errors.
*battle.php --> line 404. Fixed an error where no $creature['experiencegained'] was defined. Causing errors in PHP 5.3.3
*donators.php --> now if the exact name is found, it will be returned instead of <=100 alternatives.